# mann-onnx-inference

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: Findonnxruntime.cmake
